@@ -4,7 +4,6 @@ import com.cloudbees.plugins.credentials.CredentialsScope;
 import com.cloudbees.plugins.credentials.SystemCredentialsProvider;
 import com.cloudbees.plugins.credentials.impl.UsernamePasswordCredentialsImpl;
 import hudson.ExtensionList;
-import org.apache.commons.io.IOUtils;
 import org.jenkinsci.plugins.workflow.libs.GlobalLibraries;
 import org.jenkinsci.plugins.workflow.libs.LibraryConfiguration;
 import org.junit.Before;
@@ -14,8 +13,9 @@ import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.recipes.LocalData;
 
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -88,14 +88,13 @@ public class ConfigurationRoundtripTest {
     }
 
     private String getConfig() throws IOException {
-        String previousConfig = null;
         assertThat(globalLibraries.getLibraries()).isNotEmpty();
         File configFile = new File(j.jenkins.getRootDir(), globalLibraries.getId() + ".xml");
         assertThat(configFile).exists();
-        try (FileInputStream input = new FileInputStream(configFile)) {
-            previousConfig = IOUtils.toString(input);
-        }
-        return previousConfig;
+        String config = Files.readString(configFile.toPath(), StandardCharsets.UTF_8);
+        return config.replaceAll(
+                "<org.jenkinsci.plugins.workflow.libs.GlobalLibraries plugin=\"pipeline-groovy-lib@.*\">",
+                "<org.jenkinsci.plugins.workflow.libs.GlobalLibraries>");
     }
 
 
